Improve discord token naming for clarity.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "Token": "YourTokenHere",
+  "DiscordToken": "YourTokenHere",
   "SelectedGraphUsername": "YourSelectedGraphUsername",
   "SelectedGraph": "YourSelectedGraphName",
   "AccountKey": "YourAccountKey"
