Update to the new Hypernodes client library.

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "DiscordToken": "YourTokenHere",
   "SelectedGraphUsername": "YourSelectedGraphUsername",
   "SelectedGraph": "YourSelectedGraphName",
-  "AccountKey": "YourAccountKey"
+  "AccountKey": "YourHypernodesAccountKey"
 }
   
