--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="DSharpPlus" Version="4.3.0" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0" />
+    <PackageReference Include="HypernodesClient" Version="1.0.0" />
   </ItemGroup>
 		<ItemGroup>
     <DotNetCliToolReference Include="DotnetPublishSsh" Version="0.1.0" />
